# oauth2-gmail

./: pyproject.toml
oauth2_gmail/: main.py
