[tool.poetry]
name = "oauth2-gmail"
version = "0.1.0"
description = ""
authors = ["Roshan Shariff <roshan.shariff@gmail.com>"]

[tool.poetry.scripts]
oauth2-gmail = "oauth2_gmail.main:app"

[tool.poetry.dependencies]
python = "^3.9"
google-auth = "^1.28.0"
google-auth-oauthlib = "^0.4.4"
typer = {extras = ["all"], version = "^0.3.2"}
secretstorage = "^3.3.1"
keyring = "^23.0.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.18.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
